sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: illegal start of simple pattern
	for (<-1 to l-1) {
             ^AlgInsertionSort:11: error: '<-' expected but '}' found.
}
^